tests/rspack-test/configCases/errors/bail/index.js
require("./a");
require("./b");
require("./c");
require("./d");
require("./dd");
require("./e");
require("./f");
require("./g");
